# Asset-Allocation

./: .gitignore  README.md  app.py  asset-allocation-tool-SPEC.md  pyproject.toml
.ai/archive/behavior-protocol/: design.md  progress.md  proposal.md  review.md
.ai/archive/initial-build/: design.md  progress.md  proposal.md  review.md  tech-research.md
.ai/changes/behavior-protocol/: design.md  progress.md  (+1 more)
.ai/scenarios/: SC-001.md  SC-002.md  SC-003.md  SC-004.md  SC-005.md  SC-006.md  SC-007.md  SC-008.md  SC-009.md  SC-011.md  SC-013.md  SC-014.md  SC-015.md  SC-017.md  SC-018.md  SC-020.md  SC-021.md  SC-022.md  SC-023.md  SC-025.md  SC-027.md  SC-028.md  SC-029.md  SC-031.md  SC-032.md  SC-035.md  SC-036.md  SC-038.md  SC-039.md  SC-040.md  SC-042.md  SC-043.md  SC-044.md  SC-046.md  SC-047.md  SC-048.md  SC-049.md
.streamlit/: secrets.toml.example
docs/: PROTOCOL.md
pages/: allocation.py  data_io.py  input.py  returns.py  settings.py
src/asset_lab/: __init__.py  bootstrap.py  charts.py  overview_presentation.py
tests/: conftest.py  test_access_control.py  test_allocation.py  test_app_guard.py  test_bootstrap.py  test_charts.py  test_core_utils.py  test_data_io.py  test_holding_master.py  test_input_view.py  test_monthly_input.py  test_navigation_guard.py  test_net_worth.py  test_overview.py  test_page_config.py  test_period.py  test_protocol.py  test_protocol_doc.py  test_protocol_thresholds.py  test_return.py  test_settings_view.py  test_target.py
views/: allocation.py  data_io.py  input.py  overview.py  protocol.py  returns.py  settings.py
(+61 files in other folders)
