[project]
name = "asset-lab"
version = "0.1.0"
description = "個人資產配置與報酬率管理工具（Streamlit + Turso）"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.42",
    "libsql>=0.1",
    "pyxirr>=0.10",
    "plotly>=5",
    "pandas>=2.2",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pip-audit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/asset_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
